# sandbox-system

./: .e2bignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  MIGRATION.md  MIGRATION_COMPLETE.md  Makefile  README.md  e2b.toml  main.py  map_connections.py  pyproject.toml  requirements.txt  setup.sh  verify.py
api/: server.py
api/routes/: e2b.py  sandbox.py  session.py
docker/base/: Dockerfile
docker/browser/: Dockerfile
docker/python/: Dockerfile
docs/: ARCHITECTURE.md  E2B_CUSTOM_TEMPLATES.md  PROJECT_OVERVIEW.md  README.md  architecture.md  e2b_examples.md  e2b_guide.md  lifecycle.md  sandbox_fs.md
examples/: conversational_agent.py
orchestrator/: __init__.py  e2b_manager.py  lifecycle.py  sandbox_manager.py  session_manager.py  state_manager.py  unified_manager.py
orchestrator/core/: __init__.py  agent.py  conversation.py  memory.py
orchestrator/providers/: __init__.py  e2b.py  gemini.py
orchestrator/tools/: __init__.py  base.py  executor.py  implementations.py  registry.py
orchestrator/utils/: __init__.py  logging.py  retry.py  streaming.py
registry/agents/: code_executor.yaml  ml_data_scientist.yaml
registry/environments/: e2b-python.yaml  python-basic.yaml
registry/prompts/: default.yaml
registry/tools/: data_analysis.yaml  execute_python.yaml  file_operations.yaml  ml_trainer.yaml  python_exec.yaml
sandbox_runtime/agent/: plan.md
sandbox_runtime/tools/: python_exec.sh
scripts/: build_e2b_template.sh  cleanup_sandboxes.py  custom_template.py  list_models.py  map_connections.py  verify.py
(+4 files in other folders)
