[project]
name = "sandbox-system"
version = "0.1.0"
description = "Stateful Sandbox System for Running AI Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "docker==7.0.0",
    "e2b-code-interpreter==1.0.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.3",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "black==24.1.1",
    "flake8==7.0.0",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
