[project]
name = "sandbox-system"
version = "1.0.0"
description = "AI Agent System with Gemini and E2B Sandboxes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "e2b-code-interpreter==1.0.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
